[gd_scene load_steps=2 format=2]

[ext_resource path="res://debugger.gd" type="Script" id=1]

[node name="debugger" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label1" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 32.0

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 50.0
